--- a/src/student.html
+++ b/src/student.html
@@ -64,11 +64,15 @@
             }
 
             function build() {
+                var number = localStorage.getItem("username")
                 // 请求数据
                 $.ajax({
                     type: 'get',   // 请求类型
                     url: 'http://localhost:8080/server/login',  // 请求地址
                     dataType: "text",        // 返回值的数据类型，text表示纯文本
+                    data: {
+                        number: number     // 获取到登陆成功学生的学号
+                    },
                     success: function (data) {     // 访问成功的回调函数，成功后会执行此函数
                         // 把data转成json
                         console.log(data);
@@ -84,11 +88,15 @@
 
             //查询课程公考
             function checkNote() {                    ///course
+                var number = localStorage.getItem("username")
                 // 请求课程数据
                 $.ajax({
                     type: 'get',   // 请求类型
                     url: 'http://localhost:8080/server/course',  // 请求地址
                     dataType: "text",        // 返回值的数据类型，text表示纯文本
+                    data: {
+                        number: number,     // 获取到登陆成功学生的学号
+                    },
                     success: function (data) {     // 访问成功的回调函数，成功后会执行此函数
                         // 把data转成json
                         console.log(data);
@@ -105,7 +113,7 @@
                 var html = "";
                 for (var i = 0; i < data.length;i++){
                     html += "<tr class='row'>" +
-                        "<td >"+data[i].name+"</td>" +
+                        "<td >"+data[i].course_name+"</td>" +
                         "<td >"+data[i].notice+"</td>" +
                         "</tr>" ;
                 }
