--- a/src/manager_creat_course.html
+++ b/src/manager_creat_course.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>创建课程</title>
+    <title>学生界面</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
@@ -31,19 +31,24 @@
         var zb2 = "<div class=\"col-xs-12\">";
         for (var i=0; i < data.length; i++) {
              var div1 = "<div class=\"row\"><div class=\"col-md-4 col-md-offset-4\"><div class=\"thumbnail\"><img src=\"https://ss0.bdstatic.com/70cFuHSh_Q1YnxGkpoWK1HF6hhy/it/u=2305034832,1135367374&fm=26&gp=0.jpg\" alt=\"北京化工大学\"><div class=\"caption\">";
-             var div2 = "<h3>" + data[i].name + "</h3>";
+             var div2 = "<h3>" + data[i].course_name + "</h3>";
              var div3 = "<p>" + data[i].notice + "</p>";
-             var div4 = "<p><a href=\"stu_unit.html\" class=\"btn btn-primary\" role=\"button\">单元学习</a><a href=\"tea_unit_add.html\" class=\"btn btn-warning\" role=\"button\">创建单元学习</a><a href=\"knowpoint.html\" class=\"btn btn-default\" role=\"button\">知识点</a></p></div></div></div></div></div></div>"
-            div += zb1+zb2+div1+div2+div3+div4;
+             var div4 = "<p><a href='stu_unit.html?course=" +data[i].course_name + "' class=\"btn btn-primary\" role=\"button\">单元学习</a>          <a href=\"knowpoint.html\" class=\"btn btn-default\" role=\"button\">知识点</a></p></div></div></div></div></div></div>"
+            div += zb1+zb2+div1+div2+div4;
         }
         $("#table-body1").append(div);
     }
     function build() {
+        // todo 在这里加入限制条件，使学生只能看到自己的课程
+        var number = localStorage.getItem("username");
         // 请求数据
         $.ajax({
             type: 'get',   // 请求类型
             url: 'http://localhost:8080/server/course',  // 请求地址
             dataType: "text",        // 返回值的数据类型，text表示纯文本
+            data:{
+                number :number,
+            },
             success: function (data) {     // 访问成功的回调函数，成功后会执行此函数
                 // 把data转成json
                 data = JSON.parse(data);
