--- a/src/stu_unit.html
+++ b/src/stu_unit.html
@@ -55,10 +55,15 @@
 
     function build() {
         // 请求数据
+        var course_name = decodeURI(getQueryVariable("course"));
+        console.log(course_name);
         $.ajax({
             type: 'get',   // 请求类型
             url: 'http://localhost:8080/server/unit_study_tea',  // 请求地址
             dataType: "text",        // 返回值的数据类型，text表示纯文本
+            data: {
+                course_name: course_name,
+            },
             success: function (data) {     // 访问成功的回调函数，成功后会执行此函数
                 // 把data转成json
                 data = JSON.parse(data);
@@ -68,6 +73,17 @@
                 //alert(data);
             }
         });
+    }
+
+    function getQueryVariable(variable)
+    {
+        var query = window.location.search.substring(1);
+        var vars = query.split("&");
+        for (var i=0;i<vars.length;i++) {
+            var pair = vars[i].split("=");
+            if(pair[0] == variable){return pair[1];}
+        }
+        return(false);
     }
 
 
