--- a/src/teacher.html
+++ b/src/teacher.html
@@ -11,28 +11,6 @@
         }
     </style>
     <script type="text/javascript">
-        function getStu() {
-            // 发送ajax请求，也就是get或post请求，相当于在浏览器里输入url访问
-            $.ajax({
-                type: 'get',   // 请求类型
-                url: 'http://localhost:8080/server/teacher_login',  // 请求地址
-                dataType: "text",        // 返回值的数据类型，text表示纯文本
-                success: function (data) {     // 访问成功的回调函数，成功后会执行此函数
-                    data = JSON.parse(data);
-                    console.log(data[0].id);
-                    console.log(data[1].name);
-                    console.log(data[2].pw);
-                    console.log(data[3].level);
-                    console.log(data[4].age);
-                    console.log(data[5].sex);
-                    console.log(data[6].phonenumber);
-                    console.log(data[7].gonghao);
-                },
-                error: function(data) {    // 访问错误的处理
-                    //alert(data);
-                }
-            });
-        }
     </script>
 </head>
 <body>
@@ -83,11 +61,16 @@
         }
 
         function build() {
+            var number = localStorage.getItem("username")
             // 请求数据
             $.ajax({
                 type: 'get',   // 请求类型
-                url: 'http://localhost:8080/server//teacher_login',  // 请求地址
+                url: 'http://localhost:8080/server/teacher_login',  // 请求地址
                 dataType: "text",        // 返回值的数据类型，text表示纯文本
+                data:{
+                    number:number,
+
+                },
                 success: function (data) {     // 访问成功的回调函数，成功后会执行此函数
                     // 把data转成json
                     data = JSON.parse(data);
@@ -104,24 +87,21 @@
             // 发送ajax请求，也就是get或post请求，相当于在浏览器里输入url访问
             $.ajax({
                 type: 'post',   // 请求类型
-                url: 'http://localhost:8080/server/course',  // 请求地址
+                url: 'http://localhost:8080/server/course_manage',  // 请求地址
                 data: {
-                    username: $("#pname").val(),     // 请求的参数，通过组件的id获取到它的值
-                    pteacherid: $("#pteacherid").val(),
-                    pnotice: $("#pnotice").val(),
+                    gonghao: $("#gonghao").val(),     // 请求的参数，通过组件的id获取到它的值
+                    course_name: $("#course_name").val(),
+                    teacher_name: $("#teacher_name").val(),
+                    xuehao: $("#xuehao").val(),
                 },
                 dataType: "text",        // 返回值的数据类型，text表示纯文本
                 success: function (data) {     // 访问成功的回调函数，成功后会执行此函数
-                    if('发布成功！' !== data) {
+                    if('操作成功！' !== data) {
                         alert(data);
                         //alert("账号或密码错误！");
                     } else {
                         alert(data);
-                        /*if ($("input[name='user']:checked").val() === '学生') {
-                            document.location = 'student.html';   // 登陆成功，跳转到学生界面
-                        } else {
-                            document.location = 'teacher.html';   //登陆成功，跳转到老师界面
-                        }*/
+
                     }
                 },
                 error: function(data) {    // 访问错误的处理
@@ -129,6 +109,7 @@
                 }
             });
         }
+
 
         function stu_course() {
             // 发送ajax请求，也就是get或post请求，相当于在浏览器里输入url访问
@@ -143,16 +124,7 @@
                 dataType: "text",        // 返回值的数据类型，text表示纯文本
                 success: function (data) {     // 访问成功的回调函数，成功后会执行此函数
                     document.location = 'stu_course.html';   // 登陆成功，跳转到学生界面
-                    /*if('登陆成功！' !== data) {
-                        alert(data);
-                        //alert("账号或密码错误！");
-                    } else {
-                        if ($("input[name='user']:checked").val() === '学生') {
-                            document.location = 'student.html';   // 登陆成功，跳转到学生界面
-                        } else {
-                            document.location = 'teacher.html';   //登陆成功，跳转到老师界面
-                        }
-                    }*/
+
                 },
                 error: function(data) {    // 访问错误的处理
                     alert(data);
@@ -161,15 +133,10 @@
         }
         
         function check_course() {
+            var number = localStorage.getItem("username")
             // 发送ajax请求，也就是get或post请求，相当于在浏览器里输入url访问
             $.ajax({
-                type: 'post',   // 请求类型
-                url: 'http://localhost:8080/server/course_manage',  // 请求地址
-                data: {
-                    username: $("#pname").val(),     // 请求的参数，通过组件的id获取到它的值
-                    psd: $("#ppsd").val(),
-                    user: $("input[name='user']:checked").val(),
-                },
+
                 dataType: "text",        // 返回值的数据类型，text表示纯文本
                 success: function (data) {     // 访问成功的回调函数，成功后会执行此函数
                     document.location = 'stu_course.html';   // 登陆成功，跳转到学生界面
@@ -185,14 +152,6 @@
             function turn_to_tea_file() {
                 // 发送ajax请求，也就是get或post请求，相当于在浏览器里输入url访问
                 $.ajax({
-                    type: 'post',   // 请求类型
-                    url: 'http://localhost:8080/server/adminner_operate_tea',  // 请求地址
-                    /*data: {
-                        username: $("#pname").val(),     // 请求的参数，通过组件的id获取到它的值
-                        psd: $("#ppsd").val(),
-                        user: $("input[name='user']:checked").val(),
-                    },
-                    dataType: "text",   */     // 返回值的数据类型，text表示纯文本
                     success: function (data) {     // 访问成功的回调函数，成功后会执行此函数
                         document.location = 'tea_file.html';   // 登陆成功，跳转到学生界面
 
@@ -247,30 +206,38 @@
 
     </script>
 
+    <button style="width: 280px;margin-left: 40%;  color: red;background-color: aqua" type="button" class="btn btn-success" onclick="check_course()">查询我的任务课程</button>
     <div >
         <div class="login-form">
-            <div class="row" style="width: 100%; margin-bottom: 24px; text-align: center; font-size: 24px;font-weight: bold;">发布课程</div>
+            <div class="row" style="width: 100%; margin-bottom: 24px; text-align: center; font-size: 24px;font-weight: bold;">课程建设</div>
             <form action="http://localhost:8080/server/course" method="post">
                 <div class="form-group input">
-                    <label for="pname">课程名称</label>
-                    <input type="text" class="form-control" name="username" id="pname" placeholder="课程名称">
+                    <label for="gonghao">老师工号</label>
+                    <input type="text" class="form-control" name="username" id="gonghao" placeholder="老师工号">
                 </div>
                 <div class="form-group input">
-                    <label for="pteacherid">教师id</label>
-                    <input type="text" class="form-control" name="pteacherid" id="pteacherid" placeholder="教师id">
+                    <label for="course_name">课程名</label>
+                    <input type="text" class="form-control" name="pteacherid" id="course_name" placeholder="课程名">
                 </div>
                 <div class="form-group input">
-                    <label for="pnotice">课程通知</label>
-                    <input type="text" class="form-control" name="pnotice" id="pnotice" placeholder="课程公告">
+                    <label for="teacher_name">教师姓名</label>
+                    <input type="text" class="form-control" name="pnotice" id="teacher_name" placeholder="教师姓名">
+                </div>
+                <div class="form-group input">
+                    <label for="xuehao">学生学号</label>
+                    <input type="text" class="form-control" name="pnotice" id="xuehao" placeholder="学生学号">
                 </div>
             </form>
         </div>
     </div>
-    <button style="width: 280px;margin-left: 40%;" type="button" class="btn btn-success" onclick="note()">发布课程</button>
-    <button style="width: 280px;margin-left: 40%;  color: red;background-color: aqua" type="button" class="btn btn-success" onclick="stu_course()">添加学生</button>
-    <button style="width: 280px;margin-left: 40%;  color: red;background-color: aqua" type="button" class="btn btn-success" onclick="check_course()">查询我的任务课程</button>
+    <button style="width: 280px;margin-left: 40%;" type="button" class="btn btn-success" onclick="note()">课程基本信息建设</button>
+<!--        todo 添加学生功能已完成，将信息加入到了stu_course中-->
+   <button style="width: 280px;margin-left: 40%;  color: red;background-color: aqua" type="button" class="btn btn-success" onclick="stu_course()">添加学生</button>
+<!--        todo 教师选择一门课程进行建设，包括：课程基本信息、上课学生、课程资源、课程作业、学习单元和知识点。  已完成-->
     <button style="width: 280px;margin-left: 40%;  color: red;background-color: aqua" type="button" class="btn btn-success" onclick="turn_to_tea_file()">发布作业文件</button>
+<!--        todo 教师选择一门课程进行建设，包括：课程基本信息、上课学生、课程资源、课程作业、学习单元和知识点。  已完成-->
     <button style="width: 280px;margin-left: 40%;  color: red;background-color: aqua" type="button" class="btn btn-success" onclick="turn_to_check_homework()">检查学生在线提交的作业</button>
+<!--        todo 教师选择一门课程进行建设，包括：课程基本信息、上课学生、课程资源、课程作业、学习单元和知识点。  已完成-->
     <button style="width: 280px;margin-left: 40%;  color: red;background-color: aqua" type="button" class="btn btn-success" onclick="turn_to_unit_add()">教师添加学习单元</button>
 
 
